tag creation tag suggestion in the text input of the tag directive

--- a/app/scripts/common/directives/tagManager/tags.tpl.html
+++ b/app/scripts/common/directives/tagManager/tags.tpl.html
@@ -4,14 +4,11 @@
             <li ng-repeat="(idx, tag) in entity.tags" class="inline mas text-muted">#{{tag}}<a href="" class="muted pull-right mls" ng-click="remove(idx)">X</a></li>
         </ul>
         <div class="input-group">
-            <input type="text" data-toggle="dropdown"  class="form-control" ng-model="newValue" ng-change="filterTag()" >
+            <input type="text" class="form-control" ng-model="myTag"  typeahead="tag.title for tag in tags | filter:$viewValue | limitTo:8">
             <span class="input-group-btn">
-                <button class="btn btn-default" ng-click="add()" type="button">{{"BTN_ADD"| translate }}</button>
+                <button class="btn btn-default" ng-click="add(myTag)" type="button">{{"BTN_ADD"| translate }}</button>
             </span>
         </div>
-        <ul class="dropdown-menu unstyled pam"  style="position:relative;width:70%" ng-show="stags" >
-            <li ng-repeat="stag in stags" class="ptm"><a ng-click="addRecTag(stag.id)" href="">#{{stag.id}}</a></li>
-        </ul>
     </div>
     <div class="clearfix"></div>
     <ul class="list-unstyled">
