--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <base href="/"></base>
     <!-- build:css(app) styles/mains.css -->
     <link rel="stylesheet" href="vendors/Font-Awesome/css/font-awesome.css">
-
+    <link rel="stylesheet" href="vendors/animatecss/animate.css"/>
     <link rel="stylesheet" href="vendors/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="vendors/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" href="vendors/angular-ui-select/dist/select.css"/>
