tag display page seems to work fine

--- a/app/index.html
+++ b/app/index.html
@@ -52,7 +52,7 @@
 <script src="vendors/ichuan-bower-tagcanvas/tagcanvas.js"></script>
 <script src="vendors/socket.io-client/socket.io.js" ></script>
 <script src="vendors/ace-builds/src/ace.js"></script>
-
+<script src="vendors/tinymce/tinymce.min.js"></script>
 <!-- build:js(app)  scripts/scripts.js -->
 <script src="vendors/ng-file-upload/angular-file-upload-html5-shim.js"></script>
 <!--<script src="config.js"></script>-->
@@ -68,6 +68,7 @@
 <script src="vendors/angular-ui-utils/ui-utils.js"></script>
 <script src="vendors/textAngular/dist/textAngular.min.js"></script>
 <script src="vendors/angular-ui-ace/ui-ace.js"></script>
+<script src="vendors/angular-ui-tinymce/src/tinymce.js"></script>
 <script src="vendors/AngularJS-Toaster/toaster.js"></script>
 <script src="vendors/angular-socket-io/socket.js"></script>
 <script src="vendors/angular-ui-select/dist/select.js"></script>
