--- a/app/scripts/common/directives/comments/comments.tpl.html
+++ b/app/scripts/common/directives/comments/comments.tpl.html
@@ -2,7 +2,7 @@
 <a class="btn btn-default pull-left" ng-click="toggleComment=!toggleComment">comment</a>
 <div class="clearfix"></div>
 <div ng-init="toggleComment=true"  collapse="toggleComment" >
-    <text-angular ng-model="commentValue" placeholder="I think..." required ></text-angular>
+    <textarea ui-tinymce="tinymceOption" ng-model="commentValue" placeholder="I think..." required ></textarea>
     <a class="btn btn-default" ng-click="addComment()">{{ 'BTN_COMMENT' | translate }}</a>
 </div>
 <div class="comments">
@@ -20,7 +20,7 @@
         <div class="clearfix"></div>
         <div ng-init="comment.isReply=true"  collapse="comment.isReply" >
             <div  class="mts  pam">
-                <text-angular ng-model="comment.replyComment" placeholder="Reply..." ></text-angular>
+                <textarea ui-tinymce="tinymceOption" ng-model="comment.replyComment" placeholder="Reply..." ></textarea>
                 <br><a class="btn btn-default" ng-click="replyComment(comment.id,$index)">Reply</a>
             </div>
 
