--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
 <script src="scripts/common/directives/fullWidth/fullWidth.js"></script>
 <script src="scripts/common/directives/uploader/uploader.js"></script>
 <script src="scripts/common/directives/pdf.js"></script>
+<script src="scripts/common/directives/d3/tagGraph.js"></script>
 
 <script src="scripts/common/services/files.js"></script>
 <script src="scripts/common/services/followers.js"></script>
@@ -96,6 +97,7 @@
 <script src="scripts/common/services/socket.js"></script>
 <script src="scripts/common/services/comment.js"></script>
 <script src="scripts/common/services/gMap.js"></script>
+<script src="scripts/common/services/d3.js"></script>
 
 <script src="scripts/home/controller.js"></script>
 <script src="scripts/home/route.js"></script>
