--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,6 @@
 <script src="vendors/tinymce/tinymce.min.js"></script>
 <!-- build:js(app)  scripts/scripts.js -->
 <script src="vendors/ng-file-upload/angular-file-upload-html5-shim.js"></script>
-<!--<script src="config.js"></script>-->
 <script src="vendors/angular/angular.js"></script>
 <script src="vendors/angular-google-maps/dist/angular-google-maps.js"></script>
 <script src="vendors/angular-animate/angular-animate.js"></script>
@@ -66,7 +65,6 @@
 <!--<script src="vendors/angular-local-zh.js"></script>-->
 <script src="vendors/angular-translate/angular-translate.js"></script>
 <script src="vendors/angular-ui-utils/ui-utils.js"></script>
-<script src="vendors/textAngular/dist/textAngular.min.js"></script>
 <script src="vendors/angular-ui-ace/ui-ace.js"></script>
 <script src="vendors/angular-ui-tinymce/src/tinymce.js"></script>
 <script src="vendors/AngularJS-Toaster/toaster.js"></script>
@@ -77,7 +75,6 @@
 <script src="scripts/common/config.js"></script>
 
 <script src="scripts/common/lang.js"></script>
-<!--<script src="scripts/common/service.js"></script>-->
 <script src="scripts/common/filters/filter_time.js"></script>
 
 <script src="scripts/common/directives/challengeBlock/challengeBlock.js"></script>
@@ -103,6 +100,7 @@
 <script src="scripts/home/route.js"></script>
 
 <script src="scripts/header/controller.js"></script>
+<script src="scripts/header/service.js"></script>
 
 <script src="scripts/footer/controller.js"></script>
 <script src="scripts/footer/route.js"></script>
