paralax on home page (problem with chromium :/) brief section in profile

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,8 @@
 <script src="vendors/AngularJS-Toaster/toaster.js"></script>
 <script src="vendors/angular-socket-io/socket.js"></script>
 <script src="vendors/angular-ui-select/dist/select.js"></script>
+<script src="vendors/angular-scroll/angular-scroll.js"></script>
+<script src="vendors/ng-parallax/angular-parallax.js"></script>
 <script src="app.js"></script>
 
 <script src="scripts/common/config.js"></script>
@@ -87,6 +89,7 @@
 <script src="scripts/common/directives/uploader/uploader.js"></script>
 <script src="scripts/common/directives/pdf.js"></script>
 <script src="scripts/common/directives/d3/tagGraph.js"></script>
+<script src="scripts/common/directives/d3/tagCloud.js"></script>
 
 <script src="scripts/common/services/files.js"></script>
 <script src="scripts/common/services/followers.js"></script>
