directive to collapse the panel in recommendation page

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -88,6 +88,7 @@
 <script src="modules/common/directives/pdf.js"></script>
 <script src="modules/common/directives/d3/tagGraph.js"></script>
 <script src="modules/common/directives/d3/tagCloud.js"></script>
+<script src="modules/common/directives/utilsBtn/utilsBtn.js"></script>
 
 <script src="modules/common/services/files.js"></script>
 <script src="modules/common/services/followers.js"></script>
