refactoring grunt deploy to work well with tinymce plugins

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -46,12 +46,19 @@
 
 <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
 <script src="http://mozilla.github.io/pdf.js/build/pdf.js"></script>
+<script src="vendors/tinymce/tinymce.min.js"></script>
 
 <!-- build:js(app)  scripts/scripts.js -->
 <script src="vendors/underscore/underscore.js"></script>
 <script src="vendors/socket.io-client/socket.io.js" ></script>
 <script src="vendors/ace-builds/src/ace.js"></script>
+<script src="vendors/ace-builds/src/mode-html.js"></script>
+
 <script src="vendors/tinymce/tinymce.min.js"></script>
+<script src="vendors/tinymce/themes/modern/theme.min.js"></script>
+<script src="vendors/tinymce/plugins/print/plugin.min.js"></script>
+<script src="vendors/tinymce/plugins/textcolor/plugin.min.js"></script>
+
 <script src="vendors/ng-file-upload/angular-file-upload-html5-shim.js"></script>
 <script src="vendors/angular/angular.js"></script>
 <script src="vendors/angular-google-maps/dist/angular-google-maps.js"></script>
