--- a/client/app/index.html
+++ b/client/app/index.html
@@ -96,6 +96,7 @@
 <script src="modules/common/directives/d3/tagGraph.js"></script>
 <script src="modules/common/directives/d3/tagCloud.js"></script>
 <script src="modules/common/directives/utilsBtn/utilsBtn.js"></script>
+<script src="modules/common/directives/googledocPreview/googledocPreview.js"></script>
 
 <script src="modules/common/services/files.js"></script>
 <script src="modules/common/services/followers.js"></script>
