--- a/client/app/modules/common/directives/comments/comments.tpl.html
+++ b/client/app/modules/common/directives/comments/comments.tpl.html
@@ -7,24 +7,40 @@
 </div>
 <div class="comments">
     <div ng-repeat="comment in comments track by $index" class="pam">
-        <div owner-block="comment.owner" class="pull-left mrm"></div>
-        <div class="pas text-muted" style="background: #f2fbf2;">
-            <a href="user/{{comment.owner}}">{{user[comment.owner].username}}</a> <a class="pull-right" ng-click="removeComment(comment.id,$index)"><i class="icon-remove"></i></a><span class="text-muted pull-right">{{comment.createDate|timeago}}</span>
-        </div>
-        <div class="clearfix"></div>
-        <div ng-show="comment.parent" class="mll mtm">
-            <blockquote ><div ng-switch on="comment.parent" class="inline mrm"><div ng-switch-default><div user-info="comment.parent.owner" ></div></div></div> <span class="text-muted pull-right">{{comment.parent.createDate|timeago}}</span><span ng-bind-html="comment.parent.displayText"></span></blockquote>
-        </div>
-        <div class="pam" ng-bind-html="comment.displayText"></div>
-        <a class="pull-right " href="" ng-click="comment.isReply=!comment.isReply">Reply</a>
-        <div class="clearfix"></div>
-        <div ng-init="comment.isReply=true"  collapse="comment.isReply" >
-            <div  class="mts  pam">
-                <textarea ui-tinymce="tinymceOption" ng-model="comment.replyComment" placeholder="Reply..." ></textarea>
-                <br><a class="btn btn-default" ng-click="replyComment(comment.id,$index)">Reply</a>
+        <div ng-if="!comment.parent">
+            <div owner-block="comment.owner" class="pull-left mrm"></div>
+            <div class="pas text-muted" style="background: #f2fbf2;">
+                <a href="user/{{comment.owner}}">{{user[comment.owner].username}}</a> <a class="pull-right" ng-click="removeComment(comment.id,$index)"><i class="icon-remove"></i></a><span class="text-muted pull-right">{{comment.createDate|timeago}}</span>
             </div>
-
+            <div class="clearfix"></div>
+            <div class="pam" ng-bind-html="comment.displayText"></div>
+            <a class="pull-right " href="" ng-click="comment.isReply=!comment.isReply">Reply</a>
+            <div class="clearfix"></div>
+            <div ng-init="comment.isReply=true"  collapse="comment.isReply" >
+                <div  class="mts  pam">
+                    <textarea ui-tinymce="tinymceOption" ng-model="comment.replyComment" placeholder="Reply..." ></textarea>
+                    <br><a class="btn btn-default" ng-click="replyComment(comment.id,$index)">Reply</a>
+                </div>
+            </div>
+            <div class="clearfix"></div>
         </div>
-        <div class="clearfix"></div>
+        <div ng-if="comment.parent" class="mll mtm">
+            <blockquote >
+                <div owner-block="comment.owner" class="pull-left mrm"></div>
+                <div class="pas text-muted" style="background: #f2fbf2;">
+                    <a href="user/{{comment.owner}}">{{user[comment.owner].username}}</a> <a class="pull-right" ng-click="removeComment(comment.id,$index)"><i class="icon-remove"></i></a><span class="text-muted pull-right">{{comment.createDate|timeago}}</span>
+                </div>
+                <div class="clearfix"></div>
+                <div class="pam" ng-bind-html="comment.displayText"></div>
+                <!--<div ng-switch on="comment.parent" class="inline mrm">-->
+                    <!--<div ng-switch-default>-->
+                        <!--<div user-info="comment.parent.owner" ></div>-->
+                    <!--</div>-->
+                <!--</div> -->
+                <!--<span class="text-muted pull-right">{{comment.parent.createDate|timeago}}</span>-->
+                <!--<span ng-bind-html="comment.parent.displayText"></span>-->
+
+            </blockquote>
+        </div>
     </div>
 </div>
