--- a/client/app/modules/common/modal/modal-transparent.tpl.html
+++ b/client/app/modules/common/modal/modal-transparent.tpl.html
@@ -1,6 +1,6 @@
 <div tabindex="-1" role="dialog" class="modal fade" ng-class="{in: animate}" ng-style="{'z-index': 1050 + index*10, display: 'block'}" ng-click="close($event)">
     <div class="modal-dialog" ng-class="{'modal-sm': size == 'sm', 'modal-lg': size == 'lg'}">
-        <div class="modal-content modal-tansparent" ng-transclude>
+        <div class="modal-content modal-tansparent center" ng-transclude>
 
         </div>
     </div>
