bug fixed with url resources

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -105,6 +105,8 @@
 <script src="modules/common/services/comment.js"></script>
 <script src="modules/common/services/gMap.js"></script>
 <script src="modules/common/services/d3.js"></script>
+<script src="modules/common/services/urls.js"></script>
+
 
 <script src="modules/home/controller.js"></script>
 <script src="modules/home/route.js"></script>
