challenge topic admin main page

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -121,7 +121,8 @@
 <script src="modules/account/lang.js"></script>
 <script src="modules/account/route.js"></script>
 
-<script src="modules/admin/admin.js"></script>
+<script src="modules/admin/controller.js"></script>
+<script src="modules/admin/route.js"></script>
 <script src="modules/admin/lang.js"></script>
 
 <script src="modules/project/controller.js"></script>
