topic bug fix Edit projects modified new design

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,6 +12,7 @@
     <meta http-equiv="X-UA-Compatible"content="IE=9; IE=8; IE=7; IE=EDGE">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <base href="/"></base>
+    <link href='http://fonts.googleapis.com/css?family=Abel' rel='stylesheet' type='text/css'>
     <!-- build:css(app) styles/main.css -->
     <link rel="stylesheet" href="vendors/Font-Awesome/css/font-awesome.css">
     <link rel="stylesheet" href="vendors/animatecss/animate.css"/>
@@ -40,7 +41,6 @@
     <div class="push"></div>
 </section>
 
-<div ng-include id="footer" src="'modules/footer/templates/footer.tpl.html'"></div>
 
 <toaster-container></toaster-container>
 
@@ -157,6 +157,10 @@
 <script src="modules/user/route.js"></script>
 <script src="modules/user/lang.js"></script>
 <script src="modules/user/users.js"></script>
+
+<script src="modules/message/controller.js"></script>
+<script src="modules/message/route.js"></script>
+<script src="modules/message/service.js"></script>
 <!-- endbuild -->
 
 
