--- a/client/app/modules/common/directives/challengeBlock/challenge-block.tpl.html
+++ b/client/app/modules/common/directives/challengeBlock/challenge-block.tpl.html
@@ -1,18 +1,16 @@
-<div class="panel panel-default">
-    <div class="panel-body">
-        <div class="media">
-            <a class="pull-left" href="#">
-                <img class="media-object" ng-src="{{ challenge.poster }}" ng-if="challenge.poster" height="100px">
-            </a>
-            <div class="media-body">
-                <h4 class="media-heading">
-                    <a ng-href="challenge/{{challengeId}}" target="_blank">{{challenge.title}}</a>
-                </h4>
-                <blockquote  style="height:80px; overflow:auto;" ng-bind-html="challenge.brief"></blockquote>
-            </div>
-        </div>
-    </div>
-    <div class="panel-footer">
+<li class="media edit-menu">
+    <a ui-sref="challenge.details({ pid : challenge.accessUrl })" class="pull-left">
+        <img ng-src="{{challenge.poster}}" ng-show="challenge.poster" class="media-object" style="height:50px;max-width: 100%">
+    </a>
+    <div class="media-body">
+        <h4 class="media-heading">
+            <a ui-sref="challenge.details({ pid : challenge.accessUrl })">{{challenge.title}}</a>
+        </h4>
+        <p class="muted" ng-if="showDetails">
+            <small ng-bind-html="challenge.brief">
+
+            </small>
+        </p>
         <div showtags="" entity="challenge"></div>
     </div>
-</div>
+</li>
