homepage changed :   carousel with most popular challenge on top

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="vendors/angular-ui-select/dist/select.css"/>
     <link rel="stylesheet" href="vendors/AngularJS-Toaster/toaster.css"/>
     <link rel="stylesheet" href="vendors/angular-crop-image/image-crop-styles.css"/>
+    <link rel="stylesheet" href="vendors/angular-carousel/dist/angular-carousel.css">
     <link rel="stylesheet" href="styles/main.css">
     <!--<link rel="stylesheet" href="vendors/intro/introjs.min.css">-->
 
@@ -61,6 +62,8 @@
 
 <script src="vendors/ng-file-upload/angular-file-upload-html5-shim.js"></script>
 <script src="vendors/angular/angular.js"></script>
+<script src="vendors/angular-touch/angular-touch.js"></script>
+<script src="vendors/angular-carousel/dist/angular-carousel.js"></script>
 <script src="vendors/angular-google-maps/dist/angular-google-maps.js"></script>
 <script src="vendors/angular-animate/angular-animate.js"></script>
 <script src="vendors/angular-sanitize/angular-sanitize.js"></script>
