--- a/client/app/modules/common/directives/challengeBlock/challenge-block.tpl.html
+++ b/client/app/modules/common/directives/challengeBlock/challenge-block.tpl.html
@@ -1,16 +1,8 @@
-<li class="media edit-menu">
-    <a ui-sref="challenge.details({ pid : challenge.accessUrl })" class="pull-left">
-        <img ng-src="{{challenge.poster}}" ng-show="challenge.poster" class="media-object" style="height:50px;max-width: 100%">
-    </a>
-    <div class="media-body">
-        <h4 class="media-heading">
-            <a ui-sref="challenge.details({ pid : challenge.accessUrl })">{{challenge.title}}</a>
-        </h4>
-        <p class="muted" ng-if="showDetails">
-            <small ng-bind-html="challenge.brief">
-
-            </small>
+<div class="challenge-block-container" ng-mouseenter="hoverEnter($event)" ng-mouseleave="hoverLeave($event)" ui-sref="challenge({ pid : challenge.accessUrl })">
+    <img ng-src="{{ challenge.poster || 'http://placehold.it/100x100' }}" width="100%" alt="" class="img-rounded"/>
+    <div class="challenge-block center" ng-if="block.isHovered" ng-style="{ height : blockHeight}">
+        <p style="margin-top:40%;">
+            {{challenge.title}}
         </p>
-        <div showtags="" entity="challenge"></div>
     </div>
-</li>
+</div>
