--- a/client/app/modules/common/directives/ownerBlock/userBlock.tpl.html
+++ b/client/app/modules/common/directives/ownerBlock/userBlock.tpl.html
@@ -1,18 +1,8 @@
-<div class="">
-    <!--<a ng-href="message/new?to={{uid}}"  class="btn btn-success pull-right">{{'BTN_MSG'|translate}}</a>-->
-
-    <a ui-sref="profile.brief({ uid : uid })" class="pull-left" >
-        <img ng-src="{{user[uid].poster}}" ng-show="user[uid].poster" width="45px" class="img-rounded"  >
-        <img ng-src="images/avater.jpg" ng-hide="user[uid].poster" width="45px"  class="img-rounded" >
-    </a>
-    <div class="media-body">
-        <b>
-            <span ng-hide="user[uid].realname">{{user[uid].username}}</span>
-            <span ng-show="user[uid].realname">{{user[uid].realname}}</span>
-        </b>
-        <span showtags="" entity="user[uid]"></span>
+<div class="challenge-block-container" ng-mouseenter="hoverEnter($event)" ng-mouseleave="hoverLeave($event)" ui-sref="profile({ uid : user.id })">
+    <img ng-src="{{ user.poster || 'http://placehold.it/100x100' }}" width="100%" alt="" class="img-rounded"/>
+    <div class="challenge-block center" ng-if="block.isHovered" ng-style="{ height : blockHeight}">
+        <p style="margin-top:40%;">
+            {{user.realname || user.username}}
+        </p>
     </div>
-
 </div>
-
-        
