small clean of the server
recommandation in progress

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -55,9 +55,10 @@
 
 <!-- todo remove this asap just here to help for smooth scroll  -->
 
+<!--<script src="http://127.0.0.1:5011/dpd.js"></script>-->
+<script src="http://ideastorm.io:5011/dpd.js"></script>
 
 <!-- build:js(app)  scripts/scripts.js -->
-<script src="http://127.0.0.1:5011/dpd.js"></script>
 <script src="vendors/underscore/underscore.js"></script>
 <script src="vendors/ace-builds/src/ace.js"></script>
 <script src="vendors/ace-builds/src/mode-html.js"></script>
@@ -71,7 +72,6 @@
 <script src="vendors/angular/angular.js"></script>
 <script src="vendors/angular-touch/angular-touch.js"></script>
 <script src="vendors/angular-carousel/dist/angular-carousel.js"></script>
-<!--<script src="vendors/angular-google-maps/dist/angular-google-maps.js"></script>-->
 <script src="vendors/angular-animate/angular-animate.js"></script>
 <script src="vendors/angular-sanitize/angular-sanitize.js"></script>
 <script src="vendors/angular-ui-router/release/angular-ui-router.js"></script>
@@ -88,7 +88,6 @@
 <script src="vendors/angular-material/config/lib/angular-animate-sequence/angular-animate-stylers.js"></script>
 <script src="vendors/angular-material/dist/material-design.min.js"></script>
 <script src="vendors/angular-timer/dist/angular-timer.js"></script>
-<script src="vendors/angular-scrollto/angular-scrollto.js"></script>
 <script src="app.js"></script>
 
 <script src="modules/common/config.js"></script>
