-socket.io connectivity problem fixed

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -44,19 +44,11 @@
 </material-content>
 
 
-
-
-
-
 <toaster-container></toaster-container>
 
 <script src="http://mozilla.github.io/pdf.js/build/pdf.js"></script>
 <script src="vendors/tinymce/tinymce.min.js"></script>
-
-<!-- todo remove this asap just here to help for smooth scroll  -->
-
-<!--<script src="http://127.0.0.1:5011/dpd.js"></script>-->
-<script src="http://ideastorm.io:5011/dpd.js"></script>
+<script src="https://cdn.socket.io/socket.io-1.0.6.js"></script>
 
 <!-- build:js(app)  scripts/scripts.js -->
 <script src="vendors/underscore/underscore.js"></script>
