--- a/client/app/index.html
+++ b/client/app/index.html
@@ -101,6 +101,7 @@
 <script src="modules/common/directives/utilsBtn/utilsBtn.js"></script>
 <script src="modules/common/directives/googledocPreview/googledocPreview.js"></script>
 <script src="modules/common/directives/iframe/iframe.js"></script>
+<script src="modules/common/directives/activity/directives.js"></script>
 
 <script src="modules/common/services/files.js"></script>
 <script src="modules/common/services/followers.js"></script>
