--notification improved (40 displayed on profile page, 5 on the right panel)

--- a/client/app/modules/common/directives/activity/follow-activity.tpl.html
+++ b/client/app/modules/common/directives/activity/follow-activity.tpl.html
@@ -1,4 +1,4 @@
-<article class="center"  ng-if="type=='users'" style="height:70px;cursor:pointer;" ui-sref="user({ uid : entity.id })">
+<article class="center"  ng-if="type=='users'" style="height:70px;cursor:pointer;" ui-sref="profile({ uid : entity.id })">
     {{ message }}
     <span>{{ entity.realname || entity.username }}</span>
 </article>
