-login with email validation -small fixes

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -103,6 +103,7 @@
 <script src="modules/common/directives/iframe/iframe.js"></script>
 <script src="modules/common/directives/activity/directives.js"></script>
 
+<script src="modules/common/services/notification.js"></script>
 <script src="modules/common/services/files.js"></script>
 <script src="modules/common/services/followers.js"></script>
 <script src="modules/common/services/recommend.js"></script>
