--- a/client/app/index.html
+++ b/client/app/index.html
@@ -27,6 +27,15 @@
     <link rel="stylesheet" href="styles/main.css">
 
     <!-- endbuild -->
+    <script src="vendors/smooth-scroll/dist/js/smooth-scroll.js"></script>
+    <script>
+        smoothScroll.init({
+            speed: 500, // Integer. How fast to complete the scroll in milliseconds
+            easing: 'easeInOutCubic', // Easing pattern to use
+            updateURL: true, // Boolean. Whether or not to update the URL with the anchor hash on scroll
+            offset: 0 // Integer. How far to offset the scrolling anchor location in pixels
+        });
+    </script>
 </head>
 <body>
 <!--[if lt IE 9]>
