when register and email already exist email is no longer send

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -75,6 +75,7 @@
 <script src="vendors/angular-material/config/lib/angular-animate-sequence/angular-animate-stylers.js"></script>
 <script src="vendors/angular-material/dist/material-design.min.js"></script>
 <script src="vendors/angular-timer/dist/angular-timer.js"></script>
+<script src="vendors/satellizer/satellizer.js"></script>
 <script src="app.js"></script>
 
 <script src="modules/common/config.js"></script>
