export note to pdf (html5)

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -89,7 +89,7 @@
 <script src="vendors/tinymce/plugins/print/plugin.min.js"></script>
 <script src="vendors/tinymce/plugins/textcolor/plugin.min.js"></script>
 <!-- build:js scripts/scripts.js -->
-<script src="vendors/oauth-signature/dist/oauth-signature.js"></script>
+<script src="vendors/jspdf/dist/jspdf.min.js"></script>
 <script src="vendors/socket.io-client/socket.io.js"></script>
 <script src="vendors/pdfjs/src/pdf.js"></script>
 <script src="vendors/underscore/underscore.js"></script>
@@ -120,6 +120,7 @@
 <script src="modules/common/gmap/gMap.js"></script>
 <script src="modules/common/socket/socket.js"></script>
 <script src="modules/common/scroller/scroller.js"></script>
+<script src="modules/common/pdf/pdf.js"></script>
 
 <script src="modules/common/lang.js"></script>
 <script src="modules/common/filters/filter_time.js"></script>
