--- a/client/app/modules/project/directives/projectBlock/project-card.tpl.html
+++ b/client/app/modules/project/directives/projectBlock/project-card.tpl.html
@@ -4,7 +4,7 @@
         <i class="fa fa-gears"></i>
         Admin
     </material-button>
-    <h4 ui-sref="project.details({ pid : project.accessUrl })">{{ project.title }}</h4>
+    <h4 ui-sref="project.home({ pid : project.accessUrl })">{{ project.title }}</h4>
     <div class="text-muted" layout="horizontal">
         <div>
             By :
