--- a/client/app/modules/challenge/directives/challengeBlock/challenge-block.tpl.html
+++ b/client/app/modules/challenge/directives/challengeBlock/challenge-block.tpl.html
@@ -1,6 +1,6 @@
-<div class="challenge-block-container" ng-mouseenter="hoverEnter($event)" ng-mouseleave="hoverLeave($event)" ui-sref="challenge({ pid : challenge.accessUrl })">
+<div class="item-block-container" ng-mouseenter="hoverEnter($event)" ng-mouseleave="hoverLeave($event)" ui-sref="challenge({ pid : challenge.accessUrl })">
     <img ng-src="{{ challenge.poster || 'http://placehold.it/100x100' }}" width="100%" alt="" class="img-rounded"/>
-    <div class="challenge-block center" ng-if="block.isHovered" ng-style="{ height : blockHeight}">
+    <div class="item-block center" ng-if="block.isHovered" ng-style="{ height : blockHeight}">
         <p style="margin-top:40%;">
             {{challenge.title}}
         </p>
