--- a/client/app/modules/workspace/directives/note-info.tpl.html
+++ b/client/app/modules/workspace/directives/note-info.tpl.html
@@ -1,3 +1,3 @@
-<material-button ui-sref="project.noteLab.details.discussion({ tid : note._id, pid : project.accessUrl })">
+<material-button ui-sref="workspace.note.discussion({ tid : note._id, pid : project.accessUrl })">
     {{ note.title }}
 </material-button>
