login form client validation with ngmessages

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -99,6 +99,7 @@
 <script src="vendors/underscore/underscore.js"></script>
 <script src="vendors/ng-file-upload/angular-file-upload-html5-shim.js"></script>
 <script src="vendors/angular/angular.js"></script>
+<script src="vendors/ng-messages/angular-messages.js"></script>
 <script src="vendors/angular-touch/angular-touch.js"></script>
 <script src="vendors/angular-carousel/dist/angular-carousel.js"></script>
 <script src="vendors/angular-animate/angular-animate.js"></script>
@@ -199,7 +200,6 @@
 <script src="modules/admin/challenge/route.js"></script>
 
 <script src="modules/admin/su/controller.js"></script>
-
 
 <script src="modules/message/controller.js"></script>
 <script src="modules/message/route.js"></script>
