recommendation works fine

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -93,6 +93,7 @@
 <script src="vendors/tinymce/plugins/print/plugin.min.js"></script>
 <script src="vendors/tinymce/plugins/textcolor/plugin.min.js"></script>
 <!-- build:js scripts/scripts.js -->
+<script src="vendors/hammerjs/hammer.js"></script>
 <script src="vendors/jspdf/dist/jspdf.min.js"></script>
 <script src="vendors/socket.io-client/socket.io.js"></script>
 <script src="vendors/pdfjs/src/pdf.js"></script>
@@ -125,6 +126,7 @@
 <script src="modules/common/socket/socket.js"></script>
 <script src="modules/common/scroller/scroller.js"></script>
 <script src="modules/common/pdf/pdf.js"></script>
+<script src="modules/common/recommendation/recommendation.js"></script>
 
 <script src="modules/common/lang.js"></script>
 
@@ -182,7 +184,6 @@
 <script src="modules/profile/route.js"></script>
 <script src="modules/profile/lang.js"></script>
 <script src="modules/profile/services.js"></script>
-<script src="modules/profile/recommandations.js"></script>
 <script src="modules/profile/directives/activity/directives.js"></script>
 <script src="modules/profile/directives/userBlock/directives.js"></script>
 
